--- a/src/main/resources/assets/storagedrawers/lang/en_US.lang
+++ b/src/main/resources/assets/storagedrawers/lang/en_US.lang
@@ -47,6 +47,8 @@ item.storagedrawers.upgradeSorting.name=Sorting Upgrade
 item.storagedrawers.upgradeSorting.description=For Refined Relocation
 item.storagedrawers.shroudKey.name=Concealment Key
 item.storagedrawers.shroudKey.description=Show or hide item labels
+item.storagedrawers.quantifyKey.name=Quantify Key
+item.storagedrawers.quantifyKey.description=Show or hide item quantities
 item.storagedrawers.personalKey.name=Personal Key
 item.storagedrawers.personalKey.default.name=Personal Key
 item.storagedrawers.personalKey.default.description=Protect access from other players
